feat: added error prone, fixed ci.yml, fixed pom.xml root